More detail and some colors to make it look slightly nicer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-
+<head>
+    <link rel="stylesheet" type="text/css" href="nextgendancecamp.css">
+</head>
 <body>
-<h1>Next Generation Dance Camp</h1>
 
-<h2>is happening October 5-7 2018 at Mt. Hood Kiwanis Camp.</h2>
+<h1 align="center">Next Generation Dance Camp</h1>
+
+<h3 align="center">Next Generation Dance Camp is a contra dance event organized for and by young people in the Western US.</h3>
+
+<h2 align="center">Join us October 5-7, 2018 at Mt. Hood Kiwanis Camp.</h2>
+
+<h3 align="center">More information here soon!</h3>
+
 </body>
