--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+    <title>Next Generation Dance Camp</title>
     <link rel="stylesheet" type="text/css" href="nextgendancecamp.css">
 </head>
 <body>
