--- a/index.html
+++ b/index.html
@@ -1,15 +1,58 @@
 <head>
     <title>Next Generation Dance Camp</title>
     <link rel="stylesheet" type="text/css" href="nextgendancecamp.css">
+    <meta charset="UTF-8">
 </head>
 <body>
+<div class="wrapper">
 
-<h1 align="center">Next Generation Dance Camp</h1>
+<table class="wrapper">
+<tr>
+  <td class="nospace">
+    <div>
+        <div class="header">
+            <h1 class="header">Next Generation Dance Camp</h1>
+        </div>
 
-<h3 align="center">Next Generation Dance Camp is a contra dance event organized for and by young people in the Western US.</h3>
+      <div class="content">
+          <p><b>When:</b> October 5-7, 2018</p>
 
-<h2 align="center">Join us October 5-7, 2018 at Mt. Hood Kiwanis Camp.</h2>
+          <p><b>Who:</b> You! Self-identified youth and youth-allied individuals welcome. We will not exclude any dancers due to age. We are a youth-organized and youth-focused event, and welcome attendees who promote our vision of empowering youth involvement in the folk community. </p>
 
-<h3 align="center">More information here soon!</h3>
+          <p><b>Who we are not:</b> An exclusive cool hip dancer clique checking IDs at the door. We are also not affiliated with Youth Dance Weekend (YDW), although they have generously provided us with a lot of advice!</p>
 
+          <p><b>What:</b> This is a three-day residential camp. Roughly, here’s what the weekend will look like:<br>
+          Friday evening: arrive at camp, settle in. Dinner and contra dance, late night couple dancing.<br>
+          Saturday: workshops during the day, (dancing, singing, jamming, organizing, calling, sound engineering, etc...), dance party at night.<br>
+          Sunday: brunch, a farewell dance, and goodbyes.</p>
+
+          <p><b>Performers:</b> TBA! We anticipate having one band and one caller on staff, which will leave room for *you* to perform! We’ll have band leaders and caller wranglers, and hope to provide opportunities to nurture and showcase all of the talented youth in our communities. Bring your instruments and your calling cards!</p>
+
+          <p><b>Where:</b> the Kiwanis Camp, which is familiar to those of you who have attended Northwest Passage. The location is spectacular: halfway up Mt. Hood. As you will need a vehicle to get to camp, we’ll be helping coordinate ride-shares from Portland, which is the nearest major city, as well as from other PNW locales. We’ll sleep in shared heated cabins. Catering will be able to accommodate most dietary requirements. We will do our best to make the event fragrance-free.</p>
+
+          <p><b>Cost:</b> TBA, sliding scale. Camp costs will be in the range of other west coast residential weekends. We’ll be utilizing a sliding scale model of pay-what-you-can to make camp affordable for as many youth as possible. We also intend to offer a limited number of work-trade positions.</p>
+
+          <p>We’d like to acknowledge the Portland Country Dance Community (PCDC), which generously provided us with both a starter grant and loan.</p>
+      </div>
+    </div>
+  </td>
+
+  <td class="sidebar nospace">
+      <div class="sidebar">
+        <a href="/index.html" class="link-text">
+          <div class="sidebar-link">
+                 <h2>Home</h2>
+          </div>
+        </a>
+
+        <a href="/blog.html" class="link-text">
+          <div class="sidebar-link">
+                 <h2>Registration</h2>
+          </div>
+        </a>
+      </div>
+  </td>
+</tr>
+</table>
+</div>
 </body>
