Add mailing list signup link

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <p><b>Cost:</b> TBA, sliding scale. Camp costs will be in the range of other west coast residential weekends. We’ll be utilizing a sliding scale model of pay-what-you-can to make camp affordable for as many youth as possible. We also intend to offer a limited number of work-trade positions.</p>
 
           <p>We’d like to acknowledge the Portland Country Dance Community (PCDC), which generously provided us with both a starter grant and loan.</p>
+
+          <h2>To get an email when registration opens, join our mailing list!</h2>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfwA-Co5LawR0j4V6G4Ffr5ubb9WdvnSqzUAB82fxZ1_Hs_Sw/viewform?embedded=true" width="760" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       </div>
     </div>
   </td>
