Add performer names

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           Saturday: workshops during the day, (dancing, singing, jamming, organizing, calling, sound engineering, etc...), dance party at night.<br>
           Sunday: brunch, a farewell dance, and goodbyes.</p>
 
-          <p><b>Performers:</b> TBA! We anticipate having one band and one caller on staff, which will leave room for *you* to perform! We’ll have band leaders and caller wranglers, and hope to provide opportunities to nurture and showcase all of the talented youth in our communities. Bring your instruments and your calling cards!</p>
+          <p><b>Performers:</b> Music by the Waxwings and calling by Yoyo Zhou</p>
 
           <p><b>Where:</b> the Kiwanis Camp, which is familiar to those of you who have attended Northwest Passage. The location is spectacular: halfway up Mt. Hood. As you will need a vehicle to get to camp, we’ll be helping coordinate ride-shares from Portland, which is the nearest major city, as well as from other PNW locales. We’ll sleep in shared heated cabins. Catering will be able to accommodate most dietary requirements. We will do our best to make the event fragrance-free.</p>
 
