Reformat to make website look a little better

--- a/index.html
+++ b/index.html
@@ -12,25 +12,30 @@
     <div>
         <div class="header">
             <h1 class="header">Next Generation Dance Camp</h1>
+            <h2>October 5-7, 2018  •  Mt. Hood Kiwanis Camp </h2>
         </div>
 
+
       <div class="content">
-          <p><b>When:</b> October 5-7, 2018</p>
-
-          <p><b>Who:</b> You! Self-identified youth and youth-allied individuals welcome. We will not exclude any dancers due to age. We are a youth-organized and youth-focused event, and welcome attendees who promote our vision of empowering youth involvement in the folk community. </p>
-
-          <p><b>Who we are not:</b> An exclusive cool hip dancer clique checking IDs at the door. We are also not affiliated with Youth Dance Weekend (YDW), although they have generously provided us with a lot of advice!</p>
-
-          <p><b>What:</b> This is a three-day residential camp. Roughly, here’s what the weekend will look like:<br>
+          <h3>What is this event?</h3>
+          <p>This is a three-day residential camp. Roughly, here’s what the weekend will look like:<br>
           Friday evening: arrive at camp, settle in. Dinner and contra dance, late night couple dancing.<br>
           Saturday: workshops during the day, (dancing, singing, jamming, organizing, calling, sound engineering, etc...), dance party at night.<br>
           Sunday: brunch, a farewell dance, and goodbyes.</p>
 
-          <p><b>Performers:</b> Music by the Waxwings and calling by Yoyo Zhou</p>
+          <h3>Who is this event for?</h3>
+          <p>You! Self-identified youth and youth-allied individuals welcome. We will not exclude any dancers due to age. We are a youth-organized and youth-focused event, and welcome attendees who promote our vision of empowering youth involvement in the folk community. </p>
 
-          <p><b>Where:</b> the Kiwanis Camp, which is familiar to those of you who have attended Northwest Passage. The location is spectacular: halfway up Mt. Hood. As you will need a vehicle to get to camp, we’ll be helping coordinate ride-shares from Portland, which is the nearest major city, as well as from other PNW locales. We’ll sleep in shared heated cabins. Catering will be able to accommodate most dietary requirements. We will do our best to make the event fragrance-free.</p>
+          <p>Who we are not: An exclusive cool hip dancer clique checking IDs at the door. We are also not affiliated with Youth Dance Weekend (YDW), although they have generously provided us with a lot of advice!</p>
 
-          <p><b>Cost:</b> TBA, sliding scale. Camp costs will be in the range of other west coast residential weekends. We’ll be utilizing a sliding scale model of pay-what-you-can to make camp affordable for as many youth as possible. We also intend to offer a limited number of work-trade positions.</p>
+          <h3>Performers</h3>
+          <p>Music by the Waxwings and calling by Yoyo Zhou</p>
+
+          <h3>Where?</h3>
+          <p>the Kiwanis Camp, which is familiar to those of you who have attended Northwest Passage. The location is spectacular: halfway up Mt. Hood. As you will need a vehicle to get to camp, we’ll be helping coordinate ride-shares from Portland, which is the nearest major city, as well as from other PNW locales. We’ll sleep in shared heated cabins. Catering will be able to accommodate most dietary requirements. We will do our best to make the event fragrance-free.</p>
+
+          <h3>Cost?</h3>
+          <p>TBA, sliding scale. Camp costs will be in the range of other west coast residential weekends. We’ll be utilizing a sliding scale model of pay-what-you-can to make camp affordable for as many youth as possible. We also intend to offer a limited number of work-trade positions.</p>
 
           <p>We’d like to acknowledge the Portland Country Dance Community (PCDC), which generously provided us with both a starter grant and loan.</p>
 
