Add band and caller bios
Still waiting on band pic

--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
           <h3>Performers</h3>
           <p>Music by the Waxwings and calling by Yoyo Zhou</p>
 
+          <p>Jesse Partridge (Riffraff, Contra Quartet), Amy Englesberg (Free Raisins, Wake Up Robin), and Alex Sturbaum
+              (Countercurrent, Gallimaufry) formed the Waxwings on a lark in 2016, and since then have been playing sweet,
+              sultry, and stomping tunes throughout the Northwest. The Waxwings combine a sweet and lyrical fiddler with
+              two powerhouse rhythm players who double as accordionists. Their joyful, pulsating sounds impel you to
+              defy gravity with every step.
+          </p>
+
+          <table><tr>
+            <td><p>Yoyo Zhou is a caller and organizer from the Bay Area who is known for his thoughtful teaching and fun dances.
+                He has been calling dances since 2012, sometimes on a few minutes' notice, to contribute to making the joy
+                 that is our dance community happen. He believes in helping dancers get the most out of each dance.
+             </p></td>
+             <td>
+                 <img height=160px src="/img/yoyohead.jpg"></img>
+             </td>
+          </tr></table>
+
           <h3>Where?</h3>
           <p>the Kiwanis Camp, which is familiar to those of you who have attended Northwest Passage. The location is spectacular: halfway up Mt. Hood. As you will need a vehicle to get to camp, we’ll be helping coordinate ride-shares from Portland, which is the nearest major city, as well as from other PNW locales. We’ll sleep in shared heated cabins. Catering will be able to accommodate most dietary requirements. We will do our best to make the event fragrance-free.</p>
 
