--- a/index.html
+++ b/index.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
 </head>
 <body>
+
+<div class="header">
+    <div class="header-inner">
+        <h1 class="header">Next Generation Dance Camp</h1>
+        <h2 class="subheader">October 5-7, 2018  •  Mt. Hood Kiwanis Camp </h2>
+    </div>
+</div>
 <div class="wrapper">
+
+
 
 <table class="wrapper">
 <tr>
+    <td class="sidebar">
+        <div class="sidebar">
+          <a href="/index.html" class="link-text">
+            <div class="sidebar-link">
+                   <h2>Home</h2>
+            </div>
+          </a>
+
+        </div>
+    </td>
   <td class="nospace">
     <div>
-        <div class="header">
-            <h1 class="header">Next Generation Dance Camp</h1>
-            <h2>October 5-7, 2018  •  Mt. Hood Kiwanis Camp </h2>
-        </div>
 
 
       <div class="content">
@@ -69,16 +84,7 @@
     </div>
   </td>
 
-  <td class="sidebar nospace">
-      <div class="sidebar">
-        <a href="/index.html" class="link-text">
-          <div class="sidebar-link">
-                 <h2>Home</h2>
-          </div>
-        </a>
 
-      </div>
-  </td>
 </tr>
 </table>
 </div>
