--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
 <table class="wrapper">
 <tr>
     <td class="sidebar">
-        <div class="sidebar">
-          <a href="/index.html" class="link-text">
-            <div class="sidebar-link">
-                   <h2>Home</h2>
-            </div>
-          </a>
-
+        <div class="sidebar nospace">
+          <a href="/index.html" class="link-text"><h2>Home</h2></a>
         </div>
     </td>
   <td class="nospace">
