Use a futuristic, star-trek font for headers

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <title>Next Generation Dance Camp</title>
     <link rel="stylesheet" type="text/css" href="nextgendancecamp.css">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|PT+Serif" rel="stylesheet">
     <meta charset="UTF-8">
 </head>
 <body>
