Add waxwings photo

--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
           <h3>Performers</h3>
           <p>Music by the Waxwings and calling by Yoyo Zhou</p>
 
-          <p>Jesse Partridge (Riffraff, Contra Quartet), Amy Englesberg (Free Raisins, Wake Up Robin), and Alex Sturbaum
-              (Countercurrent, Gallimaufry) formed the Waxwings on a lark in 2016, and since then have been playing sweet,
-              sultry, and stomping tunes throughout the Northwest. The Waxwings combine a sweet and lyrical fiddler with
-              two powerhouse rhythm players who double as accordionists. Their joyful, pulsating sounds impel you to
-              defy gravity with every step.
-          </p>
+          <table><tr>
+              <td>
+                  <img height=160px src="/img/waxwings.jpg"></img>
+              </td>
+              <td>
+                  <p>Jesse Partridge (Riffraff, Contra Quartet), Amy Englesberg (Free Raisins, Wake Up Robin), and Alex Sturbaum
+                      (Countercurrent, Gallimaufry) formed the Waxwings on a lark in 2016, and since then have been playing sweet,
+                      sultry, and stomping tunes throughout the Northwest. The Waxwings combine a sweet and lyrical fiddler with
+                      two powerhouse rhythm players who double as accordionists. Their joyful, pulsating sounds impel you to
+                      defy gravity with every step.
+                  </p>
+              </td>
+          </tr></table>
 
           <table><tr>
             <td><p>Yoyo Zhou is a caller and organizer from the Bay Area who is known for his thoughtful teaching and fun dances.
