Make a layout so it's easy to add more pages

--- a/index.html
+++ b/index.html
@@ -1,33 +1,7 @@
-<head>
-    <title>Next Generation Dance Camp</title>
-    <link rel="stylesheet" type="text/css" href="nextgendancecamp.css">
-    <link href="https://fonts.googleapis.com/css?family=Audiowide|PT+Serif" rel="stylesheet">
-    <meta charset="UTF-8">
-</head>
-<body>
+---
+layout: default
+---
 
-<div class="header">
-    <div class="header-inner">
-        <h1 class="header">Next Generation Dance Camp</h1>
-        <h2 class="subheader">October 5-7, 2018  •  Mt. Hood Kiwanis Camp </h2>
-    </div>
-</div>
-<div class="wrapper">
-
-
-
-<table class="wrapper">
-<tr>
-    <td class="sidebar">
-        <div class="sidebar nospace">
-          <a href="/index.html" class="link-text"><h2>Home</h2></a>
-        </div>
-    </td>
-  <td class="nospace">
-    <div>
-
-
-      <div class="content">
           <h3>What is this event?</h3>
           <p>This is a three-day residential camp. Roughly, here’s what the weekend will look like:<br>
           Friday evening: arrive at camp, settle in. Dinner and contra dance, late night couple dancing.<br>
@@ -76,12 +50,3 @@
 
           <h2>To get an email when registration opens, join our mailing list!</h2>
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfwA-Co5LawR0j4V6G4Ffr5ubb9WdvnSqzUAB82fxZ1_Hs_Sw/viewform?embedded=true" width="760" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-      </div>
-    </div>
-  </td>
-
-
-</tr>
-</table>
-</div>
-</body>
