Put our acknawledegment in an Acknowledgments section

--- a/index.html
+++ b/index.html
@@ -46,4 +46,6 @@ Sunday: brunch, a farewell dance, and goodbyes.</p>
 <h3>Cost?</h3>
 <p>TBA, sliding scale. Camp costs will be in the range of other west coast residential weekends. We’ll be utilizing a sliding scale model of pay-what-you-can to make camp affordable for as many youth as possible. We also intend to offer a limited number of work-trade positions.</p>
 
+
+<h3>Acknowledgments</h3>
 <p>We’d like to acknowledge the Portland Country Dance Community (PCDC), which generously provided us with both a starter grant and loan.</p>
