Reformat email list headings

--- a/email_list.html
+++ b/email_list.html
@@ -1,5 +1,6 @@
 ---
 layout: default
 ---
-<h3>Registration opens May 4th!  To get an email reminding you to register, join our mailing list!</h3>
+<h3>Registration opens May 4th!<h3>
+<h3>To get an email reminding you to register, join our mailing list!</h3>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfwA-Co5LawR0j4V6G4Ffr5ubb9WdvnSqzUAB82fxZ1_Hs_Sw/viewform?embedded=true" width="760" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
