Add registration open date to the main page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ Sunday: brunch, a farewell dance, and goodbyes.</p>
 <h3>Cost?</h3>
 <p>TBA, sliding scale. Camp costs will be in the range of other west coast residential weekends. We’ll be utilizing a sliding scale model of pay-what-you-can to make camp affordable for as many youth as possible. We also intend to offer a limited number of work-trade positions.</p>
 
+<h3>How do I register?</h3>
+<p>Registration for NGDC 2018 will be available on this website on May 4th.</p>
+
 <h3>More Questions?</h3>
 <p>If you have other questions please feel free to email us at contact@nextgendancecamp.org </p>
 
