Reformat camp description

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <h3>What is this event?</h3>
-<p>This is a three-day residential contra dance camp. Roughly, here’s what the weekend will look like:<br>
-<b>Friday evening:</b>  arrive at camp, settle in. Dinner and contra dance, late night couple dancing.<br>
-<b>Saturday:</b>  workshops during the day, (dancing, singing, jamming, organizing, calling, sound engineering, etc...), dance party at night.<br>
-<b>Sunday:</b>  brunch, a farewell dance, and goodbyes.</p>
+<p>This is a three-day residential contra dance camp. Roughly, here’s what the weekend will look like:</p>
+<p><b>Friday evening:</b>  arrive at camp, settle in. Dinner and contra dance, late night couple dancing.</p>
+<p><b>Saturday:</b>  workshops during the day, (dancing, singing, jamming, organizing, calling, sound engineering, etc...), dance party at night.</p>
+<p><b>Sunday:</b>  brunch, a farewell dance, and goodbyes.</p>
 
 <h3>Who is this event for?</h3>
 <p>You! Self-identified youth and youth-allied individuals welcome. We will not exclude any dancers due to age. We are a youth-organized and youth-focused event, and welcome attendees who promote our vision of empowering youth involvement in the folk community. </p>
