Change yoyo's photo name
Partly for consistency, partly in hopes that it will fix the broken link?

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
      that is our dance community happen. He believes in helping dancers get the most out of each dance.
  </p></td>
  <td>
-     <img height=160px src="/img/yoyohead.jpg"></img>
+     <img height=160px src="/img/yoyo.jpg"></img>
  </td>
 </tr></table>
 
