--- a/index.html
+++ b/index.html
@@ -43,8 +43,23 @@ layout: default
 <h3>Where?</h3>
 <p>the Kiwanis Camp, which is familiar to those of you who have attended Northwest Passage. The location is spectacular: halfway up Mt. Hood. As you will need a vehicle to get to camp, we’ll be helping coordinate ride-shares from Portland, which is the nearest major city, as well as from other PNW locales. We’ll sleep in shared heated cabins. Catering will be able to accommodate most dietary requirements. We will do our best to make the event fragrance-free.</p>
 
+<h3>How does housing work?</h3>
+
+<p>Kiwanis camp has heated cabins broken up into rooms that house 4-10 people, and campers will sign up for rooms when they get there.  We won't gender designate any of the rooms.  Most bathrooms will be gender-neutral, but we will designate one men's and one women's bathroom with showers, and there are a few single occupancy restrooms and showers at camp.</p>
+
 <h3>Cost?</h3>
-<p>TBA, sliding scale. Camp costs will be in the range of other west coast residential weekends. We’ll be utilizing a sliding scale model of pay-what-you-can to make camp affordable for as many youth as possible. We also intend to offer a limited number of work-trade positions.</p>
+<p>Because we want this event to be available to everyone, NextGen has a sliding scale. You decide how much makes sense for your financial situation.  Below are suggestions, paired with how they relate to our expenses and who we suggest pay these amounts, but you are welcome to pay anything above our minimum of $125.  If that minimum really doesn't work for you and you're still interested in coming, please contact us at contact@nextgendancecamp.org.</p>
+
+<p>
+<b>Minimum:  $125</b> -  Suggested for students, people with debt, and other people for whom coming to camp is a financial strain.<br>
+
+<b>Break even:  $185</b> - This is the rough break even cost per person.  If you can afford to pay this amount, please do!  If you can't afford this amount, please pay less!<br>
+
+<b>A little extra:  $245</b> - This covers the break even cost for you plus some of the cost to bring someone else.  If you're financially comfortable and secure, we recommend paying this amount (or more!).  We also recommend paying at least this amount if you are 40 or older.<br>
+
+<b>Bring a friend:  $370</b> - This covers your cost plus the cost of one other person.  If you love the mission of helping build community and leadership among young people in the dance community and can afford it, this amount will help us continue to make camp sustainable, and make it accessible to more people.<br></p>
+
+<p>Please take our suggestions as a guide and not a rule.  We're committed to making this camp as affordable as possible to anyone who wants to come, and you know more about your financial situation than we do.  But please also remember that in order to make camp financially sustainable, we need some people to pay more than the break-even price.</p>
 
 <h3>How do I register?</h3>
 <p>Registration for NGDC 2018 will be available on this website on May 4th.</p>
