Link registration from the main page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<h2>Registration is open!  <a href="/registration.html">Go here to register for NGDC 2018!</a></h2>
+
 <h3>What is this event?</h3>
 <p>This is a three-day residential contra dance camp. Roughly, here’s what the weekend will look like:</p>
 <p><b>Friday evening:</b>  arrive at camp, settle in. Dinner and contra dance, late night couple dancing.</p>
@@ -60,9 +62,6 @@ layout: default
 <b>Bring a friend:  $370</b> - This covers your cost plus the cost of one other person.  If you love the mission of helping build community and leadership among young people in the dance community and can afford it, this amount will help us continue to make camp sustainable, and make it accessible to more people.<br></p>
 
 <p>Please take our suggestions as a guide and not a rule.  We're committed to making this camp as affordable as possible to anyone who wants to come, and you know more about your financial situation than we do.  But please also remember that in order to make camp financially sustainable, we need some people to pay more than the break-even price.</p>
-
-<h3>How do I register?</h3>
-<p>Registration for NGDC 2018 will be available on this website on May 4th.</p>
 
 <h3>Is this a science fiction themed event?</h3>
 <p>No, just a contra dance camp organized by nerds.  Our science fiction fandoms won't play a role in the weekend more substantial than our choice of website aesthetics and registration dates.</p>
