make refund policy linkable

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ layout: default
 
 <p>Please take our suggestions as a guide and not a rule.  We're committed to making this camp as affordable as possible to anyone who wants to come, and you know more about your financial situation than we do.  But please also remember that in order to make camp financially sustainable, we need some people to pay more than the break-even price.</p>
 
-<h3>Refund policy</h3>
+<h3 id="refund-policy">Refund policy</h3>
 
 <p>When you sign up, we plan for your presence both financially and in terms of all the supplies we'll need to buy or have to wrangle for camp, so if it turns out you can't come, please tell us as soon as possible!  If you cancel between now and September 10th, we'll refund anything you paid minus $15.  If you cancel after September 10th, we won't generally offer refunds.  However, we understand that things can change suddenly and camp is expensive, so if you have extenuating circumstances, let us know and we'll consider making an exception.</p>
 
