Add registration cutoff day to the website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-<h2>Registration is open!  <a href="/registration.html">Go here to register for NGDC 2018!</a></h2>
+<h2>Registration is open!  <a href="/registration.html">Register here for NGDC 2018.</a></h2>
+
+<p>Registration closes September 25th.</p>
 
 <h3>What is this event?</h3>
 <p>This is a three-day residential contra dance camp. Roughly, here’s what the weekend will look like:</p>
