Do registration through a standalone google form

--- a/registration.html
+++ b/registration.html
@@ -2,4 +2,4 @@
 layout: default
 ---
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfxDaDupqdKwTFZhnsVaE-_HNfp_4nUs6i2q_18jA4ku8XO1g/viewform?embedded=true" width="860" height="2200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSfxDaDupqdKwTFZhnsVaE-_HNfp_4nUs6i2q_18jA4ku8XO1g/viewform">Go here to register for NGDC 2018!</a></h2>
