--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2>Registration is open!  <a href="/registration.html">Register here for NGDC 2018.</a></h2>
+<h2>Registration is open!  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxDaDupqdKwTFZhnsVaE-_HNfp_4nUs6i2q_18jA4ku8XO1g/viewform">Register here for NGDC 2018.</a></h2>
 
 <p>Registration closes September 25th.</p>
 
