Add larks and ravens statement to the website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
 </tr></table>
 
 <h3>What role terms will you be using?</h3>
-<p>All dances will be called using Larks and Ravens.  We firmly believe that any person can dance any role, and we want our use of language to reflect that.</p>
+<p>All dances will be called using Larks and Ravens.  We firmly believe that any person can dance any role, and we want our use of language to reflect that.  You can read more about why we made this choice <a href="/larks_and_ravens.html">here</a></p>
 
 <h3>Where?</h3>
 <p>the Kiwanis Camp, which is familiar to those of you who have attended Northwest Passage. The location is spectacular: halfway up Mt. Hood. As you will need a vehicle to get to camp, we’ll be helping coordinate ride-shares from Portland, which is the nearest major city, as well as from other PNW locales. We’ll sleep in shared heated cabins. Catering will be able to accommodate most dietary requirements. We will do our best to make the event fragrance-free.</p>
