Remove registration because we're full

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<h2>Registration is open!  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxDaDupqdKwTFZhnsVaE-_HNfp_4nUs6i2q_18jA4ku8XO1g/viewform">Register here for NGDC 2018.</a></h2>
+<h2>Next Gen Dance Camp 2018 is currently full!</h2>
 
-<p>Registration closes September 25th.</p>
+<p>  To be added to the waitlist, please email contact@nextgendancecamp.org.</p>
 
 <h3>What is this event?</h3>
 <p>This is a three-day residential contra dance camp. Roughly, here’s what the weekend will look like:</p>
