Registration is actually closed, no waitlist

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 layout: default
 ---
 
-<h2>Next Gen Dance Camp 2018 is currently full!</h2>
-
-<p>  To be added to the waitlist, please email contact@nextgendancecamp.org.</p>
+<h2>Registration for Next Gen Dance Camp 2018 is now closed!  We hope to see you next year.</h2>
 
 <h3>What is this event?</h3>
 <p>This is a three-day residential contra dance camp. Roughly, here’s what the weekend will look like:</p>
