Add safety and fragrance free plocies to the website

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
 <h3>Who is this event for?</h3>
 <p>You! Self-identified youth and youth-allied individuals welcome. We will not exclude any dancers due to age. We are a youth-organized and youth-focused event, and welcome attendees who promote our vision of empowering youth involvement in the folk community. </p>
 <p>Who we are not: An exclusive cool hip dancer clique checking IDs at the door. We are also not affiliated with Youth Dance Weekend (YDW), although they have generously provided us with a lot of advice!</p>
+<p>To help safe and welcoming for everyone, please read our <a href="/safety.html">safety agreement</a> and <a href="fragrance_free.html">fragrance free policy</a> </p>
 
 <h3>Performers</h3>
 <p>Music by the Waxwings and calling by Yoyo Zhou</p>
